boltffi_tests/fixtures/negative_scanner/higher_ranked_function_pointer.rs
#[export]
pub fn install(callback: for<'a> fn(&'a str)) {
    let _ = callback;
}
